Fix heading spacing back to padding.

--- a/src/Elements/Heading/Heading.scss
+++ b/src/Elements/Heading/Heading.scss
@@ -5,7 +5,7 @@ $active-color: #1A202C;
 
 .Heading {
   font-weight: 500;
-  margin: 0.5rem 1rem;
+  padding: 0.5rem 1rem;
   font-size: 1rem;
   line-height: 1.5rem;
 
